# imuhost_wip

./: CMakeLists.txt  accel_solver.h  calibrated_imu.cpp  calibrated_imu.h  hid.cpp  hid.h  hid_mpu.cpp  hid_mpu.h  imu.cpp  imu.h  main.cpp  packet.h  synchronizer.h  util.h
